# CodeHUD

./: API.md  CLI_GUI_FIXES_SUMMARY.md  COMPREHENSIVE_AUDIT_REPORT.txt  CONVERSATION_SUMMARY.md  Cargo.toml  analysis_output.json  call_graph.txt  call_graph_visualizer.rs  comprehensive_verification  dependencies_output.json  dependency_visualizer.py  deps_test.json  quality_analysis.json  quality_output.json  quality_test.json  security_analysis.json  security_test.json  self_quality.json  self_topology.json  test_single_pass.sh  verification_topology.json  verify_analysis  verify_analysis.rs  verify_security.json
.claude/: settings.local.json
Docs/: CHANGELOG.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  INSTALLATION.md  LLM_plan.txt  LLM_vision.txt  README.md  RUST_FEATURES.md  Vision.txt  treesitter_bullet_generator.txt  update_plan.txt
Test files/: comprehensive_verification.rs  test_crate_discovery.rs  test_crate_discovery_main.rs  test_crate_main.rs  test_denoiser.rs  test_denoiser_simple.rs  test_file_mapping.rs
analysis_output/: comments.json  summaries.json
codehud-analysis/: Cargo.toml
codehud-analysis/src/: health_score.rs  lib.rs  pipeline.rs
codehud-cli/: Cargo.toml  call_graph.txt  dependencies_output.json  test_community_queries.json  test_enhanced_tree_sitter.json  test_with_debug.json  test_with_queries.json
codehud-cli/src/: data.rs  direct.rs  llm.rs  main.rs
codehud-core/: Cargo.toml
codehud-core/benches/: extraction_benchmarks.rs
codehud-core/src/: lib.rs  query_engine.rs
codehud-core/src/analysis/: health_calculator.rs  mod.rs  pipeline.rs  view_generator.rs
codehud-core/src/cache/: mod.rs
codehud-core/src/constants/: complexity_thresholds.rs  health_score_thresholds.rs  mod.rs
codehud-core/src/external_tools/: bandit.rs  cargo_audit.rs  cargo_test.rs  clippy.rs  coverage.rs  git.rs  mod.rs  mypy.rs  pylint.rs  radon.rs  ripgrep.rs  ruff.rs  rustfmt.rs  vulture.rs
codehud-core/src/extractors/: dependencies.rs  evolution.rs  flow.rs  issues.rs  mod.rs  orphaned_files.rs  performance.rs  quality.rs  runtime_profiler.rs  security.rs  testing.rs  topology.rs
codehud-core/src/graph/: algorithms.rs  algorithms_minimal.rs  analyzer.rs  edges.rs  metrics.rs  mod.rs  nodes.rs
codehud-core/src/models/: analysis_result.rs  mod.rs  semantic_nodes.rs  view_types.rs
codehud-core/src/pattern/: mod.rs
codehud-gui/: Cargo.toml  GUI_INTEGRATION_SUMMARY.md
codehud-gui/src/: app.rs  lib.rs  main.rs  signals.rs  signals_pyqt5.rs  state.rs  utils.rs
codehud-gui/src/components/: ai_assistant.rs  code_editor.rs  code_formatter.rs  code_quality_metrics.rs  console_output.rs  dependency_graph.rs  documentation_viewer.rs  file_browser.rs  git_integration.rs  health_monitor.rs  llm_debugger.rs  menu_bar.rs  metrics_panel.rs  mod.rs  performance_monitor.rs  plugin_manager.rs  project_explorer.rs  quality_dashboard.rs  refactoring_tools.rs  search_panel.rs  settings_panel.rs  status_bar.rs  task_scheduler.rs  test_runner.rs  toolbar.rs  topology_view.rs
codehud-gui/src/controllers/: analysis_controller.rs  mod.rs
codehud-gui/src/views/: call_graph_view_gui.rs  console_view_gui.rs  dependencies_view_gui.rs  documentation_view_gui.rs  files_view_gui.rs  health_view_gui.rs  llm_view_gui.rs  metrics_view_gui.rs  mod.rs  performance_view_gui.rs  quality_view_gui.rs  settings_view_gui.rs  tests_view_gui.rs  topology_view_gui.rs
codehud-gui/src/widgets/: health_dashboard.rs  mod.rs  project_explorer.rs
codehud-llm/: Cargo.toml
codehud-llm/src/: comment_extractor.rs  constitutional.rs  conversation.rs  crate_summarizer.rs  denoiser.rs  equivalence.rs  extraction_fsm.rs  ffi.rs  file_processor.rs  gemini.rs  lib.rs  native.rs  progress_monitor.rs  validation.rs
codehud-llm/src/narrator/: aggregate.rs  config.rs  cst.rs  findings.rs  mod.rs  render.rs
codehud-llm/src/narrator/detectors/: comments.rs  entrypoint.rs  imports_exports.rs  io.rs  mod.rs  module_relationships.rs  utility_class.rs  wrapper.rs
codehud-llm/tests/: equivalence_tests.rs  phase_5b_validation.rs
codehud-realtime/: Cargo.toml
codehud-realtime/src/: lib.rs
codehud-transform/: Cargo.toml
codehud-transform/src/: engine.rs  lib.rs  libcst.rs  rollback.rs  types.rs
codehud-transform/src/transformers/: architectural.rs  batch.rs  magic_numbers.rs  mod.rs  multi_language.rs  multi_language_old.rs  test_generation.rs  test_generation_old.rs  unused_args.rs  unused_args_old.rs
codehud-tui/src/: main.rs
codehud-utils/: Cargo.toml
codehud-utils/src/: lib.rs
codehud-utils/src/config/: mod.rs
codehud-utils/src/file/: mod.rs
codehud-utils/src/logging/: mod.rs
codehud-utils/src/string/: mod.rs
codehud-viz/: Cargo.toml
codehud-viz/src/: call_graph.rs  graph_analysis.rs  graph_dot.rs  graphviz.rs  lib.rs
codehud-viz/tests/: quality_test.rs  security_test.rs  summary_test.rs  topology_test.rs
complete_viz/: quality_analysis.txt  quality_visualization.json  security_analysis.txt  security_visualization.json  topology_analysis.txt  topology_visualization.json
generated_graphs/: dependency_graph_overview.dot  python_final_overview.dot
project_scan_output/: analysis_metadata.json  crate_summaries.json  file_summaries.json  hierarchical_summary.md  subcrate_summaries.json
project_scan_output_insights_only/: analysis_metadata.json  crate_summaries.json  file_summaries.json  hierarchical_summary.md
scripts/: setup_grammars.sh
test_hierarchical/: Cargo.toml  comment_extractor.rs  crate_summarizer.rs  critical.rs  denoiser.rs  extraction_fsm.rs  file_processor.rs  lib.rs  main.rs  monitoring.rs  native_stub.rs  ollama.rs  structured.rs
test_project_hierarchical/: Cargo.toml
test_project_hierarchical/codehud-tui/: Cargo.toml
test_project_hierarchical/codehud-tui/src/: lib.rs
test_project_hierarchical/codehud-viz/: Cargo.toml
test_project_hierarchical/codehud-viz/src/: call_graph.rs  lib.rs
test_project_hierarchical/codehud-viz/tests/: dependencies_test.rs  flow_test.rs
viz_output/: quality_analysis.txt  quality_visualization.json
(+16 files in other folders)
