[package]
name = "codehud-analysis"
version = "0.1.0"
edition = "2021"
description = "Analysis pipeline and rendering system - Zero degradation from Python"

[dependencies]
# Core infrastructure
serde = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# Analysis pipeline dependencies
codehud-core = { path = "../codehud-core" }
codehud-utils = { path = "../codehud-utils" }

# External tool integration
tokio-process = { workspace = true }
which = { workspace = true }
regex = { workspace = true }

# Markdown rendering
pulldown-cmark = { workspace = true }
pulldown-cmark-to-cmark = { workspace = true }
comrak = { workspace = true }

# Performance profiling
pprof = { workspace = true }
memory-stats = { workspace = true }
sysinfo = { workspace = true }

# Caching
cacache = { workspace = true }
sled = { workspace = true }
bincode = { workspace = true }

# JSON/YAML handling
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }