[package]
name = "codehud-core"
version = "0.1.0"
edition = "2021"
description = "Core analysis engine with 11+ extractors - Zero degradation from Python"

[features]
default = []
clap = ["dep:clap"]

[dependencies]
# Core infrastructure
serde = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Analysis engine
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-java = { workspace = true }
petgraph = { workspace = true }
nalgebra = { workspace = true }

# File operations
walkdir = { workspace = true }
notify = { workspace = true }
globset = { workspace = true }
rayon = { workspace = true }
tokio-stream = { workspace = true }

# External tools
tokio-process = { workspace = true }
which = { workspace = true }
regex = { workspace = true }

# Utilities
camino = { workspace = true }
path-clean = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }
clap = { workspace = true, optional = true }
codehud-utils = { path = "../codehud-utils" }
lazy_static = "1.5"

# Caching
cacache = { workspace = true }
sled = { workspace = true }
bincode = { workspace = true }

# JSON/YAML parsing
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio-test = "0.4"
criterion = { workspace = true }

[[bench]]
name = "extraction_benchmarks"
harness = false