[package]
name = "codehud-llm"
version = "0.1.0"
edition = "2021"
description = "LLM integration (29+ components) - Zero degradation from Python"

[dependencies]
# Core infrastructure
serde = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# HTTP client for API calls
reqwest = { workspace = true }

# Native LLM inference (Phase 5b) - temporarily disabled for GUI integration
# candle-core = { workspace = true }
# candle-nn = { workspace = true }
# candle-transformers = { workspace = true }
# tokenizers = { workspace = true }
# hf-hub = { workspace = true }

# PyO3 for FFI bridge (Phase 5a)
pyo3 = { workspace = true }

# JSON schema validation
jsonschema = { workspace = true }
serde_json = { workspace = true }

# Pattern matching for mistake detection
regex = { workspace = true }
syn = { workspace = true }

# Analysis integration
codehud-core = { path = "../codehud-core" }
codehud-utils = { path = "../codehud-utils" }

# External tool integration
tokio-process = { workspace = true }

# Narrator dependencies
itertools = "0.13"
aho-corasick = "1.1"
tree-sitter = { workspace = true }

# Logging
log = { workspace = true }

# Directory traversal for comment extraction
walkdir = { workspace = true }

# TOML parsing for crate discovery
toml = { workspace = true }

# Progress bars
indicatif = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }

[features]
default = []
candle = []