[package]
name = "codehud-transform"
version = "0.1.0"
edition = "2021"
description = "Code transformation and refactoring engine - Zero degradation from Python"

[dependencies]
# Core infrastructure
serde = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Analysis integration
codehud-core = { path = "../codehud-core" }
codehud-utils = { path = "../codehud-utils" }

# AST parsing and transformation
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-java = { workspace = true }

# Code generation and formatting
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Text processing
regex = { workspace = true }
similar = "2.5"
ropey = "1.6"

# External tool integration
tokio-process = { workspace = true }
which = { workspace = true }

# Git integration for rollbacks
git2 = "0.18"

# File operations
walkdir = { workspace = true }
tempfile = { workspace = true }

# Parallel processing
rayon = { workspace = true }

# JSON/YAML handling
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# LibCST equivalent - concrete syntax tree
rowan = "0.15"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }

# [[bench]]
# name = "transformation_benchmarks"
# harness = false