[package]
name = "codehud-utils"
version = "0.1.0"
edition = "2021"
description = "Utility functions with Python compatibility - Zero degradation from Python"

[dependencies]
# Core infrastructure
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# Path manipulation (replacing pathlib)
camino = { workspace = true }
path-clean = { workspace = true }

# String processing
unicode-normalization = { workspace = true }
unicode-segmentation = { workspace = true }

# Configuration parsing (replacing configparser)
toml = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }

# Logging (replacing Python logging)
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }

# Utilities
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }